--- a/Apps/DynamicStylingPOC.xcodeproj/xcshareddata/xcschemes/AllTests.xcscheme
+++ b/Apps/DynamicStylingPOC.xcodeproj/xcshareddata/xcschemes/AllTests.xcscheme
@@ -41,6 +41,15 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "2A26D1D12B2B16E800F68A9E"
+            BuildableName = "DynamicStylingPOC.app"
+            BlueprintName = "DynamicStylingPOC"
+            ReferencedContainer = "container:DynamicStylingPOC.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
