MKOD-994 [FEATURE] Add passing view and coord. factories to child flows

--- a/Apps/DynamicStylingPOC.xcodeproj/xcshareddata/xcschemes/DynamicStylingPOC.xcscheme
+++ b/Apps/DynamicStylingPOC.xcodeproj/xcshareddata/xcschemes/DynamicStylingPOC.xcscheme
@@ -26,17 +26,32 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES"
-      shouldAutocreateTestPlan = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES">
+      <TestPlans>
+         <TestPlanReference
+            reference = "container:DynamicStylingPOC/DynamicStylingPOC.xctestplan"
+            default = "YES">
+         </TestPlanReference>
+      </TestPlans>
       <Testables>
          <TestableReference
             skipped = "NO"
             parallelizable = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "2A26D1E12B2B16EA00F68A9E"
+               BlueprintIdentifier = "2AC510452B7C9F270030B196"
                BuildableName = "DynamicStylingPOCTests.xctest"
                BlueprintName = "DynamicStylingPOCTests"
+               ReferencedContainer = "container:DynamicStylingPOC.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "2A3E09242B34693800B3C2CD"
+               BuildableName = "AllTests.xctest"
+               BlueprintName = "AllTests"
                ReferencedContainer = "container:DynamicStylingPOC.xcodeproj">
             </BuildableReference>
          </TestableReference>
@@ -45,9 +60,9 @@
             parallelizable = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "2A3E09242B34693800B3C2CD"
-               BuildableName = "AllTests.xctest"
-               BlueprintName = "AllTests"
+               BlueprintIdentifier = "2AC510452B7C9F270030B196"
+               BuildableName = "DynamicStylingPOCTests.xctest"
+               BlueprintName = "DynamicStylingPOCTests"
                ReferencedContainer = "container:DynamicStylingPOC.xcodeproj">
             </BuildableReference>
          </TestableReference>
