--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -11,7 +11,10 @@ opt_in_rules:
 
 excluded:
   - Packages/Sources/TestUtils/Generated/AutoMockable.generated.swift
-
+  - Packages/Tests/SignUpFeatureTests/Generated/AutoMockable.generated.swift
+  - Packages/Tests/SignInFeatureTests/Generated/AutoMockable.generated.swift
+  - Packages/Tests/OnboardingFeature/Generated/AutoMockable.generated.swift
+  
 custom_rules:
   # check's for Combine's .assign(to: xxx, on: self) ref-cycle
   combine_assign_to_self:
